Sec4_ASSN1-XXX: code optimizations